--- a/index.html
+++ b/index.html
@@ -1066,7 +1066,7 @@
 
     
     <div class="article-style">
-      <p style="text-align: justify;">Солдатов Алексей Евгеньевич - студет ЛУЧШЕГО ВУЗА РОССИИ РУДН, выпускник с отличием Школы Космонавтики, победитель и призер олимпиад и просто классный парень :)</p>
+      <p style="text-align: justify;">Солдатов Алексей Евгеньевич - студет РУДН, выпускник с отличием Школы Космонавтики, победитель и призер олимпиад и просто классный парень :)</p>
 
     </div>
     
